MDHS-22 - Fix footer on mobile

--- a/src/main/resources/public/app/sass/organisms/_site-footer.scss
+++ b/src/main/resources/public/app/sass/organisms/_site-footer.scss
@@ -35,6 +35,7 @@
 }
 
 .site-footer__logo {
+  margin-top: 40px;
   margin-bottom: 20px;
   width: 100px;
 }
